[tool.poetry]
name = "sigrun"
version = "0.1.0"
description = "Sigrun is a Discord bot that manages your Valheim server."
authors = ["Cody"]
readme = "README.md"
packages = [{ include = "sigrun" }]

[tool.poetry.dependencies]
aws-cdk-lib = "^2.128.0"
aws-lambda-typing = "^2.16.1"
boto3 = "^1.20.24"
click = "^7.1.2"
httpx = "^0.21.1"
loguru = "^0.5"
PyNaCl = "^1.4.0"
python = "^3.10"
urllib3 = "^1.26.18"

[tool.poetry.scripts]
sigrun = 'sigrun.cli:sigrun'
discord = 'sigrun.register:discord'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
